--- a/data/en/author.yaml
+++ b/data/en/author.yaml
@@ -1,18 +1,18 @@
 # some information about you
-name: "John Doe"
-nickname: "John"
+name: "Sergio Villarreal"
+nickname: "ameser"
 # greeting message before your name. it will default to "Hi! I am" if not provided
 greeting: "Hi, I am"
 image: "images/author/john.png"
 # give your some contact information. they will be used in the footer
 contactInfo:
-  email: "johndoe@example.com"
-  phone: "+0123456789"
+  email: "ameser@gmail.com"
+  phone: "+9195932988"
 
 # some summary about what you do
 summary:
   - I am a Developer
   - I am a Devops
-  - I love servers
+  - I am a Azure Architecht
   - I work on open-source projects
   - I love to work with some fun projects
